fixed the collapse bug | made everything more purple

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -2,6 +2,8 @@
     --antracite-light: #666f7a;
     --antracite: #292C33;
     --antracite-dark: #232427;
+    --background: #23182e;
+    --circles-: #160f1d;
     --white: #faf0e6;
     --highlight: rgb(255, 69, 0); 
     /* #ff4500*/
@@ -10,7 +12,7 @@
 
 html {
     font-family: candara;
-    background-color: var(--antracite-dark);
+    background-color: var(--background);
     /* overflow: hidden; */
 }
 
